i think i fixed the spacing issue at the root, on the explorations page

--- a/styles/partials/pages/_Explorations.scss
+++ b/styles/partials/pages/_Explorations.scss
@@ -9,11 +9,11 @@
   }
 
   .section {
-    &--wrapper {
-      &.pb-section-gap {
-        padding-bottom: 0;
-      }
-    }
+    // &--wrapper {
+    //   &.pb-section-gap {
+    //     padding-bottom: 0;
+    //   }
+    // }
 
     
     &--main {
